compute.tf
resource "azurerm_network_interface" "vm_nic" {
  count               = var.vm_count 
  name                = "nic-linux-vm-${count.index}" 
  location            = azurerm_resource_group.rg.location 
  resource_group_name = azurerm_resource_group.rg.name 
  tags                = local.common_tags

  ip_configuration {
    name                          = "internal" 
    subnet_id                     = azurerm_subnet.private_subnet.id 
    private_ip_address_allocation = "Dynamic" 
  }
}

resource "azurerm_network_interface_backend_address_pool_association" "nic_lb_assoc" {
  count                   = var.vm_count 
  network_interface_id    = azurerm_network_interface.vm_nic[count.index].id 
  ip_configuration_name   = "internal" 
  backend_address_pool_id = azurerm_lb_backend_address_pool.backend_pool.id 
}

resource "azurerm_linux_virtual_machine" "linux_vm" {
  count                 = var.vm_count 
  name                  = "vm-linux-${var.environment}-${count.index}" 
  resource_group_name   = azurerm_resource_group.rg.name 
  location              = var.location 
  size                  = "Standard_B1s" 
  admin_username        = var.admin_username 
  network_interface_ids = [azurerm_network_interface.vm_nic[count.index].id] 
  
  # Inyección del Script Cloud-Init
  user_data             = base64encode(file("${path.module}/cloud-init.txt"))
  tags                  = local.common_tags

  admin_ssh_key {
    username   = var.admin_username 
    public_key = var.ssh_public_key 
  }

  os_disk {
    caching              = "ReadWrite" 
    storage_account_type = "Standard_LRS" 
  }

  source_image_reference {
    publisher = "Canonical" 
    offer     = "0001-com-ubuntu-server-jammy" 
    sku       = "22_04-lts" 
    version   = "latest" 
  }
}
