loadbalancer.tf
resource "azurerm_public_ip" "lb_pip" {
  name                = "pip-web-lb" 
  location            = azurerm_resource_group.rg.location 
  resource_group_name = azurerm_resource_group.rg.name 
  allocation_method   = "Static" 
  sku                 = "Standard" 
  tags                = local.common_tags
}

resource "azurerm_lb" "web_lb" {
  name                = "lb-web-${var.environment}" 
  location            = azurerm_resource_group.rg.location 
  resource_group_name = azurerm_resource_group.rg.name 
  sku                 = "Standard" 
  tags                = local.common_tags

  frontend_ip_configuration {
    name                 = "PublicIPAddress" 
    public_ip_address_id = azurerm_public_ip.lb_pip.id 
  }
}

resource "azurerm_lb_backend_address_pool" "backend_pool" {
  loadbalancer_id = azurerm_lb.web_lb.id 
  name            = "BackEndAddressPool" 
}

resource "azurerm_lb_probe" "hp_http" {
  loadbalancer_id = azurerm_lb.web_lb.id 
  name            = "http-running-probe" 
  port            = 80 
}

resource "azurerm_lb_rule" "lb_rule_http" {
  loadbalancer_id                = azurerm_lb.web_lb.id 
  name                           = "LBRule-HTTP" 
  protocol                       = "Tcp" 
  frontend_port                  = 80 
  backend_port                   = 80 
  frontend_ip_configuration_name = "PublicIPAddress" 
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.backend_pool.id] 
  probe_id                       = azurerm_lb_probe.hp_http.id 
}
