network.tf
resource "azurerm_resource_group" "rg" {
  name     = "rg-laboratorio-maestro-${var.environment}" 
  location = var.location 
  tags     = local.common_tags
}

resource "azurerm_virtual_network" "vnet" {
  name                = "vnet-laboratorio" 
  address_space       = ["10.0.0.0/16"] 
  location            = azurerm_resource_group.rg.location 
  resource_group_name = azurerm_resource_group.rg.name 
  tags                = local.common_tags
}

resource "azurerm_subnet" "private_subnet" {
  name                 = "snet-privada" 
  resource_group_name  = azurerm_resource_group.rg.name 
  virtual_network_name = azurerm_virtual_network.vnet.name 
  address_prefixes     = ["10.0.1.0/24"] 
}

resource "azurerm_subnet" "bastion_subnet" {
  name                 = "AzureBastionSubnet" 
  resource_group_name  = azurerm_resource_group.rg.name 
  virtual_network_name = azurerm_virtual_network.vnet.name 
  address_prefixes     = ["10.0.2.0/24"] 
}

resource "azurerm_subnet" "public_subnet" {
  name                 = "snet-publica" 
  resource_group_name  = azurerm_resource_group.rg.name 
  virtual_network_name = azurerm_virtual_network.vnet.name 
  address_prefixes     = ["10.0.3.0/24"] 
}

resource "azurerm_network_security_group" "nsg_private" {
  name                = "nsg-privado" 
  location            = azurerm_resource_group.rg.location 
  resource_group_name = azurerm_resource_group.rg.name 
  tags                = local.common_tags

  security_rule {
    name                       = "Allow-HTTP-Inbound" 
    priority                   = 100 
    direction                  = "Inbound" 
    access                     = "Allow" 
    protocol                   = "Tcp" 
    source_port_range          = "*" 
    destination_port_range     = "80" 
    source_address_prefix      = "*" 
    destination_address_prefix = "*" 
  }

  security_rule {
    name                       = "Allow-HTTPS-Inbound" 
    priority                   = 110 
    direction                  = "Inbound" 
    access                     = "Allow" 
    protocol                   = "Tcp" 
    source_port_range          = "*" 
    destination_port_range     = "443" 
    source_address_prefix      = "*" 
    destination_address_prefix = "*" 
  }

  security_rule {
    name                       = "Allow-Bastion-SSH" 
    priority                   = 120 
    direction                  = "Inbound" 
    access                     = "Allow" 
    protocol                   = "Tcp" 
    source_port_range          = "*" 
    destination_port_range     = "22" 
    source_address_prefix      = "10.0.2.0/24" 
    destination_address_prefix = "*" 
  }
}

resource "azurerm_subnet_network_security_group_association" "nsg_assoc" {
  subnet_id                 = azurerm_subnet.private_subnet.id 
  network_security_group_id = azurerm_network_security_group.nsg_private.id 
}

resource "azurerm_public_ip" "bastion_pip" {
  name                = "pip-bastion" 
  location            = azurerm_resource_group.rg.location 
  resource_group_name = azurerm_resource_group.rg.name 
  allocation_method   = "Static" 
  sku                 = "Standard" 
  tags                = local.common_tags
}

resource "azurerm_bastion_host" "bastion" {
  name                = "bastion-host" 
  location            = azurerm_resource_group.rg.location 
  resource_group_name = azurerm_resource_group.rg.name 
  tags                = local.common_tags

  ip_configuration {
    name                 = "configuration" 
    subnet_id            = azurerm_subnet.bastion_subnet.id 
    public_ip_address_id = azurerm_public_ip.bastion_pip.id 
  }
}
